# sql-translate

./: .pre-commit-config.yaml  LICENSE  README.md  editor.mjs  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  rollup.config.mjs
.github/: dependabot.yml
.github/workflows/: cd.yml  smokeshow.yml  test.yml  tests.yml
app/: config.py  custom_types.py  dependencies.py  dialects.py  main.py  models.py  translator.py
app/routers/: data.py  hypermedia.py
scripts/: test.sh  update_requirements.sh
sql_translate/: api.py  main.py  models.py  translator.py  utils.py
sql_translate/frontend/: index.html  package-lock.json  package.json
sql_translate/frontend/src/: App.tsx
sql_translate/frontend/src/components/: CodeEditor.tsx  DialectSelector.tsx
src/: editor.js  editor.mjs
static/css/: pico.min.css  styles.css
static/js/: editor-setup.js  editor.bundle.js  editor.bundle.min.js  htmx.min.js
templates/: base.html  home.html
templates/fragments/: dialect-dropdown.html  input-sql.html  output-sql.html
tests/: test_api.py  test_dialects.py  test_models.py  test_translator.py  test_utils.py
tests/routers/: test_data.py  test_hypermedia.py
